test/libyul/yulSyntaxTests/switch_duplicate_case.yul
{
	switch 0
	case 0 {}
	case 0x0 {}
}
// ----
// DeclarationError 6792: (24-35): Duplicate case "0x0" defined.
